--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,9 +18,8 @@
 
 body {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
   margin: 0;
 }
 
@@ -30,3 +29,11 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+
+/* .visible {
+  display: inline-block;
+}
+
+.hidden {
+  display: none;
+} */
